--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
     "react-dom": "^15.2.1",
+    "react-router": "^2.6.0",
     "sass-loader": "^4.0.0",
     "webpack": "^1.13.1"
   }
