--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/eeclaire/Website#readme",
   "dependencies": {
-    "react": "^15.2.1"
+    "json-loader": "^0.5.4",
+    "react": "^15.2.1",
+    "react-markdown": "^2.4.2",
+    "react-remarkable": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
@@ -31,6 +34,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.4.3",
     "http-server": "^0.9.0",
     "image-webpack-loader": "^2.0.0",
     "node-sass": "^3.8.0",
