--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server"
+    "start": "http-server & webpack",
+    "dan": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000"
   },
   "repository": {
     "type": "git",
@@ -37,12 +38,14 @@
     "html-loader": "^0.4.3",
     "http-server": "^0.9.0",
     "image-webpack-loader": "^2.0.0",
+    "markdown-loader": "^0.1.7",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
     "sass-loader": "^4.0.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.16.2"
   }
 }
