--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "http-server": "^0.9.0",
@@ -46,7 +47,7 @@
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
     "sass-loader": "^4.0.0",
-    "webpack": "^1.13.1",
+    "webpack": "^2.2.1",
     "webpack-dev-server": "^1.16.2"
   }
 }
