--- a/package.json
+++ b/package.json
@@ -27,27 +27,25 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
     "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.11.1",
-    "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
-    "css-loader": "^0.23.1",
+    "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.3",
+    "file-loader": "^0.10.0",
+    "html-loader": "^0.4.4",
     "http-server": "^0.9.0",
     "image-webpack-loader": "^2.0.0",
-    "markdown-loader": "^0.1.7",
+    "markdown-loader": "^2.0.0",
+    "marked": "^0.3.6",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^6.0.2",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^2.4.1"
   }
 }
